language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_nested_local_variable.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n  let a = {\n    let b = 10\n    b + 1\n  }\n}\n"
---
----- BEFORE ACTION

pub fn main() {
  let a = {
    let b = 10
    ▔▔▔▔↑     
    b + 1
  }
}


----- AFTER ACTION

pub fn main() {
  let a = {
    let b: Int = 10
    b + 1
  }
}
