language-server/src/tests/snapshots/gleam_language_server__tests__action__annotate_use_with_partially_annotated_parameters.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn wibble(wobble: fn(Int, Int) -> Int) {\n  wobble(1, 2)\n}\n\npub fn main() {\n  use a: Int, b <- wibble\n  a + b\n}\n"
---
----- BEFORE ACTION

pub fn wibble(wobble: fn(Int, Int) -> Int) {
  wobble(1, 2)
}

pub fn main() {
  use a: Int, b <- wibble
  ▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑        
  a + b
}


----- AFTER ACTION

pub fn wibble(wobble: fn(Int, Int) -> Int) {
  wobble(1, 2)
}

pub fn main() {
  use a: Int, b: Int <- wibble
  a + b
}
