language-server/src/tests/snapshots/gleam_language_server__tests__action__assign_unused_result_in_block.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n    {\n        let x = 1\n        Ok(x)\n        Nil\n    }\n    Nil\n}\n"
---
----- BEFORE ACTION

pub fn main() {
    {
        let x = 1
        Ok(x)
        ▔▔↑  
        Nil
    }
    Nil
}


----- AFTER ACTION

pub fn main() {
    {
        let x = 1
        let _ = Ok(x)
        Nil
    }
    Nil
}
