language-server/src/tests/snapshots/gleam_language_server__tests__action__assign_unused_result_on_block_start.snap
---
source: language-server/src/tests/action.rs
expression: "\npub fn main() {\n    {\n        let x = 1\n        Ok(x)\n        Ok(x)\n    }\n    Nil\n}\n"
---
----- BEFORE ACTION

pub fn main() {
    {
    ↑
        let x = 1
        Ok(x)
        Ok(x)
    }
    Nil
}


----- AFTER ACTION

pub fn main() {
    let _ = {
        let x = 1
        Ok(x)
        Ok(x)
    }
    Nil
}
