language-server/src/tests/snapshots/gleam_language_server__tests__action__collapse_nested_case.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(x) {\n  case x {\n    Ok(var) -> case var {\n      1 -> 2\n      2 -> 4\n      _ -> -1\n    }\n    _ -> todo\n  }\n}"
---
----- BEFORE ACTION
pub fn main(x) {
  case x {
    Ok(var) -> case var {
       ↑                 
      1 -> 2
      2 -> 4
      _ -> -1
    }
    _ -> todo
  }
}


----- AFTER ACTION
pub fn main(x) {
  case x {
    Ok(1) -> 2
    Ok(2) -> 4
    Ok(_) -> -1
    _ -> todo
  }
}
