language-server/src/tests/snapshots/gleam_language_server__tests__action__collapse_nested_case_combines_inner_and_outer_guards_and_adds_parentheses_when_needed.snap
---
source: language-server/src/tests/action.rs
expression: "pub fn main(x) {\n  case x {\n    [first, ..rest] if False || True ->\n      case first {\n        1 if False && True -> 1.1\n        _ if True || False -> 0.0 *. 10.0\n        _ -> 0.0\n      }\n\n    [] -> 1.1\n  }\n}\n"
---
----- BEFORE ACTION
pub fn main(x) {
  case x {
    [first, ..rest] if False || True ->
     ↑                                 
      case first {
        1 if False && True -> 1.1
        _ if True || False -> 0.0 *. 10.0
        _ -> 0.0
      }

    [] -> 1.1
  }
}


----- AFTER ACTION
pub fn main(x) {
  case x {
    [1, ..rest] if { False || True } && False && True -> 1.1
    [_, ..rest] if { False || True } && { True || False } -> 0.0 *. 10.0
    [_, ..rest] if False || True -> 0.0

    [] -> 1.1
  }
}
